# RaTeX

./: .gitignore  Cargo.toml  Package.swift  README.md  README.zh-CN.md  RELEASING.md
.github/workflows/: ci.yml  pages.yml  release-android.yml  release-crates.yml  release-react-native.yml
crates/ratex-ffi/include/: ratex.h
crates/ratex-ffi/src/: jni.rs  lib.rs
crates/ratex-katex-fonts/: Cargo.toml  README.md
crates/ratex-katex-fonts/src/: lib.rs
crates/ratex-layout/src/: engine.rs  layout_box.rs  stacked_delim.rs  to_display.rs
crates/ratex-layout/tests/: layout_vs_katex.rs
crates/ratex-parser/src/: environments.rs  macro_expander.rs  parser.rs  tests.rs
crates/ratex-pdf/: Cargo.toml
crates/ratex-pdf/src/: fonts.rs  lib.rs  renderer.rs
crates/ratex-pdf/tests/: smoke.rs
crates/ratex-render/: Cargo.toml
crates/ratex-render/src/: renderer.rs
crates/ratex-render/tests/: golden_test.rs
crates/ratex-svg/: Cargo.toml
crates/ratex-svg/src/: standalone.rs
demo/: benchmark.html  index.html  support_table.html
demo/android/: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
demo/android/app/: build.gradle.kts
demo/react-native/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
demo/react-native/android/: settings.gradle
demo/react-native/ios/: Podfile
demo/web/: benchmark.html
docs/: PROJECT_STRUCTURE.md
scripts/: set-version.sh  sync-katex-ttf-to-font-crate.sh  update_golden_output.sh
tests/golden/: test_cases.txt
tools/golden_compare/: compare_golden.py
(+19 files in other folders)
